--- a/rootdir/etc/init.qcom.power.rc
+++ b/rootdir/etc/init.qcom.power.rc
@@ -38,6 +38,7 @@ on init
     write /dev/stune/top-app/schedtune.colocate 1
 
     # Disable UFS powersaving
+    write /sys/devices/platform/soc/${ro.boot.bootdevice}/clkscale_enable 0
     write /sys/devices/platform/soc/${ro.boot.bootdevice}/clkgate_enable 0
     write /sys/devices/platform/soc/${ro.boot.bootdevice}/hibern8_on_idle_enable 0
 
@@ -58,16 +59,16 @@ on boot
     # For cpusets initialize for Silver only first and then Silver + Gold
     # Silver only configuration cannot work with 0-7
     write /dev/cpuset/top-app/cpus 0-5
-    write /dev/cpuset/audio-app/cpus 1-2
-    write /dev/cpuset/foreground/cpus 0-5
-    write /dev/cpuset/foreground/boost/cpus 0-5
-    write /dev/cpuset/background/cpus 0-5
+    write /dev/cpuset/audio-app/cpus 2-3
+    write /dev/cpuset/foreground/cpus 4-7
+    write /dev/cpuset/foreground/boost/cpus 4-7
+    write /dev/cpuset/background/cpus 0-1
     write /dev/cpuset/system-background/cpus 0-5
-    write /dev/cpuset/top-app/cpus 0-7
-    write /dev/cpuset/foreground/cpus 0-7
-    write /dev/cpuset/foreground/boost/cpus 0-7
-    write /dev/cpuset/background/cpus 0-7
-    write /dev/cpuset/system-background/cpus 0-7
+    write /dev/cpuset/top-app/cpus 0-5
+    write /dev/cpuset/foreground/cpus 4-7
+    write /dev/cpuset/foreground/boost/cpus 4-7
+    write /dev/cpuset/background/cpus 0-1
+    write /dev/cpuset/system-background/cpus 0-5
 
 on property:init.svc.vendor.charger=running
     setprop persist.sys.usb.config mass_storage
@@ -76,12 +77,13 @@ on property:init.svc.vendor.charger=running
     write /sys/devices/system/cpu/cpu1/online 0
     write /sys/devices/system/cpu/cpu2/online 0
     write /sys/devices/system/cpu/cpu3/online 0
-    write /sys/devices/system/cpu/cpu4/online 0
     write /sys/devices/system/cpu/cpu5/online 0
+    write /sys/devices/system/cpu/cpu6/online 0
     write /sys/devices/system/cpu/cpu7/online 0
     wait /dev/block/bootdevice
 
     # Enable UFS powersaving
+    write /sys/devices/platform/soc/${ro.boot.bootdevice}/clkscale_enable 1
     write /sys/devices/platform/soc/${ro.boot.bootdevice}/clkgate_enable 1
     write /sys/devices/platform/soc/${ro.boot.bootdevice}/hibern8_on_idle_enable 1
 
@@ -89,7 +91,7 @@ on property:init.svc.vendor.charger=running
     write /sys/module/lpm_levels/parameters/sleep_disabled 0
 
     write /sys/module/msm_thermal/parameters/enabled "N"
-    symlink /dev/block/platform/soc/${ro.boot.bootdevice} /dev/block/bootdevice
+    symlink /dev/block/platform/soc/1d84000.ufshc /dev/block/bootdevice
     mkdir /mnt/vendor/persist
     chown root system /mnt/vendor/persist
     chmod 0771 /mnt/vendor/persist
@@ -107,60 +109,72 @@ on enable-low-power
     # Set the default IRQ affinity to the silver cluster.
     # When a CPU is isolated/hotplugged, the IRQ affinity is adjusted
     # to one of the CPU from the default IRQ affinity mask.
-    write /proc/irq/default_smp_affinity "3f"
+    write /proc/irq/default_smp_affinity "f"
 
-    # Core control parameters on silver
-    write /sys/devices/system/cpu/cpu0/core_ctl/not_preferred "0 0 0 0 1 1"
-    write /sys/devices/system/cpu/cpu0/core_ctl/min_cpus 4
-    write /sys/devices/system/cpu/cpu0/core_ctl/busy_up_thres 60
-    write /sys/devices/system/cpu/cpu0/core_ctl/busy_down_thres 40
-    write /sys/devices/system/cpu/cpu0/core_ctl/offline_delay_ms 100
-    write /sys/devices/system/cpu/cpu0/core_ctl/is_big_cluster 0
-    write /sys/devices/system/cpu/cpu0/core_ctl/task_thres 8
+    # Core control parameters
+    write /sys/devices/system/cpu/cpu6/core_ctl/min_cpus 0
+    write /sys/devices/system/cpu/cpu6/core_ctl/busy_up_thres 80
+    write /sys/devices/system/cpu/cpu6/core_ctl/busy_down_thres 70
+    write /sys/devices/system/cpu/cpu6/core_ctl/offline_delay_ms 100
+    write /sys/devices/system/cpu/cpu6/core_ctl/is_big_cluster 1
+    write /sys/devices/system/cpu/cpu6/core_ctl/task_thres 4
 
     # Setting b.L scheduler parameters
-    write /proc/sys/kernel/sched_upmigrate 96
-    write /proc/sys/kernel/sched_downmigrate 90
-    write /proc/sys/kernel/sched_group_upmigrate 140
-    write /proc/sys/kernel/sched_group_downmigrate 120
+    write /proc/sys/kernel/sched_upmigrate 95
+    write /proc/sys/kernel/sched_downmigrate 85
+    write /proc/sys/kernel/sched_group_upmigrate 100
+    write /proc/sys/kernel/sched_group_downmigrate 95
     write /proc/sys/kernel/sched_walt_rotate_big_tasks 1
 
     # Configure governor settings for little cluster
     write /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor "schedutil"
-    write /sys/devices/system/cpu/cpu0/cpufreq/schedutil/up_rate_limit_us 0
-    write /sys/devices/system/cpu/cpu0/cpufreq/schedutil/down_rate_limit_us 0
-    write /sys/devices/system/cpu/cpu0/cpufreq/schedutil/hispeed_freq 1209600
-    write /sys/devices/system/cpu/cpu0/cpufreq/scaling_min_freq 576000
+    write /sys/devices/system/cpu/cpu0/cpufreq/schedutil/rate_limit_us 0
+    write /sys/devices/system/cpu/cpu0/cpufreq/schedutil/hispeed_freq 1612800
+    write /sys/devices/system/cpu/cpu0/cpufreq/schedutil/pl 1
+    write /sys/devices/system/cpu/cpu0/cpufreq/scaling_min_freq 1209600
 
     # Configure governor settings for big cluster
     write /sys/devices/system/cpu/cpu6/cpufreq/scaling_governor "schedutil"
-    write /sys/devices/system/cpu/cpu6/cpufreq/schedutil/up_rate_limit_us 0
-    write /sys/devices/system/cpu/cpu6/cpufreq/schedutil/down_rate_limit_us 0
-    write /sys/devices/system/cpu/cpu6/cpufreq/schedutil/hispeed_freq 1344400
-    write /sys/devices/system/cpu/cpu6/cpufreq/scaling_min_freq 652000
-    write /sys/module/cpu_boost/parameters/input_boost_freq "0:1209600"
-    write /sys/module/cpu_boost/parameters/input_boost_ms 40
-    write /sys/module/cpu_boost/parameters/powerkey_input_boost_freq "0:1209600 1:0 2:0 3:0 4:0 5:0 6:2054400 7:0"
+    write /sys/devices/system/cpu/cpu6/cpufreq/schedutil/rate_limit_us 0
+    write /sys/devices/system/cpu/cpu6/cpufreq/schedutil/hispeed_freq 1574400
+    write /sys/devices/system/cpu/cpu6/cpufreq/schedutil/pl 1
+    write /sys/module/cpu_boost/parameters/input_boost_freq "0:1612800"
+    write /sys/module/cpu_boost/parameters/input_boost_ms 80
+
+    # Set up powerkey boost freq
+    write /sys/module/cpu_boost/parameters/powerkey_input_boost_freq "0:1209600 1:0 2:0 3:0 4:0 5:0 6:1843200 7:0"
     write /sys/module/cpu_boost/parameters/powerkey_input_boost_ms 400
 
-    # Sched_load_boost as -6 is equivalent to target load as 85.
-    # It is per cpu tunable
-    write /sys/devices/system/cpu/cpu6/sched_load_boost -6
-    write /sys/devices/system/cpu/cpu7/sched_load_boost -6
-    write /sys/devices/system/cpu/cpu6/cpufreq/schedutil/hispeed_load 85
+    # Limit the min frequency to 979MHz
+    write /sys/devices/system/cpu/cpu6/cpufreq/scaling_min_freq 979200
+
+    # Enable oom_reaper
+    write /sys/module/lowmemorykiller/parameters/oom_reaper 1
 
     # Enable bus-dcvs
     write /sys/class/devfreq/soc:qcom,cpubw/governor "bw_hwmon"
     write /sys/class/devfreq/soc:qcom,cpubw/polling_interval 50
-    write /sys/class/devfreq/soc:qcom,cpubw/bw_hwmon/mbps_zones "1144 1720 2086 2929 3879 5931 6881"
+    write /sys/class/devfreq/soc:qcom,cpubw/min_freq 1525
+    write /sys/class/devfreq/soc:qcom,cpubw/bw_hwmon/mbps_zones "2288 4577 6500 8132 9155 10681"
     write /sys/class/devfreq/soc:qcom,cpubw/bw_hwmon/sample_ms 4
-    write /sys/class/devfreq/soc:qcom,cpubw/bw_hwmon/io_percent 68
+    write /sys/class/devfreq/soc:qcom,cpubw/bw_hwmon/io_percent 50
     write /sys/class/devfreq/soc:qcom,cpubw/bw_hwmon/hist_memory 20
-    write /sys/class/devfreq/soc:qcom,cpubw/bw_hwmon/hyst_length 0
-    write /sys/class/devfreq/soc:qcom,cpubw/bw_hwmon/down_thres 80
+    write /sys/class/devfreq/soc:qcom,cpubw/bw_hwmon/hyst_length 10
     write /sys/class/devfreq/soc:qcom,cpubw/bw_hwmon/guard_band_mbps 0
     write /sys/class/devfreq/soc:qcom,cpubw/bw_hwmon/up_scale 250
     write /sys/class/devfreq/soc:qcom,cpubw/bw_hwmon/idle_mbps 1600
+
+    write /sys/class/devfreq/soc:qcom,llccbw/governor "bw_hwmon"
+    write /sys/class/devfreq/soc:qcom,llccbw/polling_interval 50
+    write /sys/class/devfreq/soc:qcom,llccbw/min_freq 1525
+    write /sys/class/devfreq/soc:qcom,llccbw/bw_hwmon/mbps_zones "1720 2929 3879 5931 6881"
+    write /sys/class/devfreq/soc:qcom,llccbw/bw_hwmon/sample_ms 4
+    write /sys/class/devfreq/soc:qcom,llccbw/bw_hwmon/io_percent 80
+    write /sys/class/devfreq/soc:qcom,llccbw/bw_hwmon/hist_memory 20
+    write /sys/class/devfreq/soc:qcom,llccbw/bw_hwmon/hyst_length 10
+    write /sys/class/devfreq/soc:qcom,llccbw/bw_hwmon/guard_band_mbps 0
+    write /sys/class/devfreq/soc:qcom,llccbw/bw_hwmon/up_scale 250
+    write /sys/class/devfreq/soc:qcom,llccbw/bw_hwmon/idle_mbps 1600
 
     # Enable mem_latency governor for DDR scaling
     write /sys/class/devfreq/soc:qcom,memlat-cpu0/governor "mem_latency"
@@ -184,11 +198,18 @@ on enable-low-power
     write /sys/class/devfreq/soc:qcom,l3-cdsp/governor "userspace"
     chown system /sys/class/devfreq/soc:qcom,l3-cdsp/userspace/set_freq
 
-    write /sys/class/devfreq/soc:qcom,mincpubw/governor "cpufreq"
+    # Gold L3 ratio ceil
+    write /sys/class/devfreq/soc:qcom,l3-cpu6/mem_latency/ratio_ceil 4000
+
+    write /sys/class/devfreq/soc:qcom,mincpubw/governor "compute"
+    write /sys/class/devfreq/soc:qcom,mincpubw/polling_interval 10
 
     # Set cpuset parameters
-    write /dev/cpuset/background/cpus 0-5
-    write /dev/cpuset/system-background/cpus 0-5
+    write /dev/cpuset/background/cpus 0-1
+    write /dev/cpuset/system-background/cpus 0-2
+    write /dev/cpuset/foreground/boost/cpus 4-7
+    write /dev/cpuset/foreground/cpus 4-7
+    write /dev/cpuset/top-app/cpus 0-7
 
     # Turn off scheduler boost at the end
     write /proc/sys/kernel/sched_boost 0
@@ -202,13 +223,21 @@ on enable-low-power
     write /sys/module/lpm_levels/L3/cpu5/ret/idle_enabled "N"
     write /sys/module/lpm_levels/L3/cpu6/ret/idle_enabled "N"
     write /sys/module/lpm_levels/L3/cpu7/ret/idle_enabled "N"
+    write /sys/module/lpm_levels/L3/l3-dyn-ret/idle_enabled "N"
 
     # Turn on sleep modes
     write /sys/module/lpm_levels/parameters/sleep_disabled 0
 
     # Enable UFS powersaving
+    write /sys/devices/platform/soc/${ro.boot.bootdevice}/clkscale_enable 1
     write /sys/devices/platform/soc/${ro.boot.bootdevice}/clkgate_enable 1
     write /sys/devices/platform/soc/${ro.boot.bootdevice}/hibern8_on_idle_enable 1
+
+    write /proc/sys/vm/swappiness 100
+    write /proc/sys/vm/watermark_scale_factor 120
+
+    # Set LMK minfree
+    write /sys/module/lowmemorykiller/parameters/minfree "18432,23040,27648,32256,85296,120640"
 
     # Post-setup services
     setprop vendor.post_boot.parsed 1
@@ -223,7 +252,6 @@ service vendor.charger /system/bin/chargeonlymode
     class charger
     user system
     group system graphics input
-    capabilities SYS_BOOT
     seclabel u:r:charger:s0
 
 service vendor.hvdcp_opti /vendor/bin/hvdcp_opti
